--- a/EDAV2_jw2531.html
+++ b/EDAV2_jw2531.html
@@ -25,7 +25,7 @@
 			d3.selectAll("circle").transition().delay(3000).duration(3000).attr("cx","50").attr("fill","red");
 			d3.select("#c3").transition().delay(6000).duration(3000).attr("cx","450");
 			d3.selectAll("circle").transition().delay(9000).duration(3000).attr("cx","250")
-			d3.selectAll("circle").transition().delay(12000).duration(3000).attr("cx","250").transition().duration(3000).attr("cy","250");
+			d3.selectAll("circle").transition().delay(12000).duration(3000).attr("cy","250");
 		</script>
 		
 	</body>
